--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -51,6 +51,9 @@
     <string name="label_btn_next">Suivant</string>
     <string name="label_btn_more_coin">Doubler votre recompense</string>
 
+    <!-- Pause view -->
+    <string name="label_btn_continue">Continuez</string>
+
     <!-- Game over View -->
     <string name="label_game_over_title">Game Over</string>
     <string name="label_btn_more_life">Gagner une vie supplementaire</string>
