[CHALLENGE] Add a notification to warn user how many reward he can get + [MAIN MENU ACTIVITY] New design for shop, challenge and setting

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Memory</string>
 
+    <!-- Main Menu Activity -->
+    <string name="main_menu_title_shop">Shop</string>
+    <string name="main_menu_title_challenge">Challenge</string>
+    <string name="main_menu_title_setting">Setting</string>
+
     <!-- Game mode Activity -->
     <string name="choose_game_mode">Choose your game mode</string>
     <string name="career">Career</string>
