--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Memory</string>
 
+    <!-- Main Menu Activity -->
+    <string name="main_menu_title_shop">Magasin</string>
+    <string name="main_menu_title_challenge">Defis</string>
+    <string name="main_menu_title_setting">Parametre</string>
+
     <!-- Activity game mode -->
     <string name="choose_game_mode">Choisissez votre mode de jeu</string>
     <string name="career">Carriere</string>
@@ -29,9 +34,9 @@
     <string name="title_setting_activity">Parametre</string>
     <string name="setting_son">Son</string>
     <string name="setting_yes">Oui</string>
-    <string name="setting_report_bug">Reportez un bug</string>
+    <string name="setting_report_bug">Reporter un bug</string>
     <string name="setting_credits">Credits</string>
-    <string name="setting_rate_us">Votez</string>
+    <string name="setting_rate_us">Voter</string>
     <string name="setting_languages">Langues</string>
     <string name="setting_notifications">Notifications</string>
     <string name="setting_no">Non</string>
